# pixiv-dl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: extractor.rs  main.rs
