[package]
edition = "2021"
name = "pixiv-dl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = 'thin'
opt-level = 'z'

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = "0.11.6"
tokio = {version = "1.14.0", features = ["full"]}
